--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ img {
 }
 
 .header__container {
-  max-width: 1392px;
+  max-width: 1352px;
   backdrop-filter: blur(60px);
   background: rgba(108, 185, 171, 0.7);
   padding: 46px;
@@ -137,6 +137,7 @@ img {
   font-size: 0;
   background: #f2f9f7;
   min-height: 600px;
+  height: 100%;
   flex-direction: column;
 }
 .product-image {
@@ -192,4 +193,137 @@ img {
   flex-direction: row;
   gap: 12px;
   margin-top: 16px;
+}
+
+.footer__copyright {
+  margin: 0;
+}
+
+@media (max-width: 1240px) {
+  .container {
+    padding: 0 42px;
+  }
+  .header {
+    padding: 0 20px;
+    top: 20px;
+  }
+
+  .header__container {
+    padding: 22px;
+  }
+
+  .promo-container {
+    padding: 172px 0 60px 0;
+    background-image: url(../image/bg-image-1024.png);
+    background-position: right 48px bottom 0;
+  }
+  .promo-title {
+    font-size: 70px;
+    margin-bottom: 40px;
+    max-width: 620px;
+  }
+
+  .promo-link {
+    display: inline-block;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    padding: 16px 24px;
+  }
+  .product {
+    min-height: 450px;
+  }
+  .footer__menu {
+    gap: 32px;
+  }
+}
+
+@media (max-width: 940px) {
+  .header__logo {
+    width: 78px;
+  }
+  .header__menu {
+    gap: 24px;
+    font-size: 16px;
+  }
+  .promo-container {
+    padding-top: 157px;
+    background-size: 203px;
+    background-position: right bottom;
+  }
+  .promo-title {
+    font-size: 54px;
+    max-width: 454px;
+  }
+  .promo-link {
+    font-size: 16px;
+    padding: 12px 18px;
+  }
+  .products {
+    padding: 80px 0;
+  }
+  .product__title {
+    font-size: 36px;
+    margin-bottom: 24px;
+  }
+  .products__list {
+    grid-template-columns: repeat(auto-fill, minmax(217px, 1fr));
+    gap: 16px;
+  }
+  .product {
+    min-height: 360px;
+  }
+  .product-image {
+    height: 210px;
+    object-fit: cover;
+  }
+  .product__title {
+    font-size: 20px;
+  }
+  .product__price {
+    font-size: 16px;
+  }
+  .footer {
+    padding: 40px 0;
+  }
+  .footer__menu {
+    gap: 24px;
+    font-size: 16px;
+  }
+  .footer__info {
+    font-size: 12px;
+  }
+  .footer__email {
+    font-size: 16px;
+    margin-bottom: 12px;
+  }
+}
+
+@media (max-width: 660px) {
+  .container {
+    padding: 0 16px;
+  }
+  .header__menu {
+    display: none;
+  }
+  .header__title {
+    font-size: 40px;
+    max-width: 200px;
+  }
+  .promo-container {
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: 538px;
+    background-size: 145px;
+    background-position: center bottom;
+  }
+  .products__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 8px;
+  }
+  .footer__container {
+    grid-template-columns: 1fr;
+  }
+  .footer__menu {
+    flex-direction: column;
+  }
 }
