--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,15 @@ body {
   color: #1d1c1d;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  appearance: none;
+  margin: 0;
+}
 ul {
   padding-left: 0;
   margin-top: 0;
@@ -198,6 +207,169 @@ img {
 .footer__copyright {
   margin: 0;
 }
+.cart {
+  padding: 215px 50px;
+}
+.cart__container {
+  display: grid;
+  align-items: start;
+  grid-template-columns: 2fr 1fr;
+  gap: 32px 20px;
+}
+.cart__titile {
+  font-weight: 400;
+  font-size: 54px;
+  color: #64099b;
+  margin: 0;
+  grid-column: 1/-1;
+}
+.cart__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px 1fr));
+  gap: 20px;
+}
+.cartItem__price {
+  font-size: 20px;
+}
+.cart__summary {
+  display: grid;
+  grid-template-areas:
+    "title button"
+    "total button";
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  padding: 24px;
+  background-color: #f2f9f7;
+  color: #1d1c1d;
+}
+.cart__summary-title {
+  grid-area: title;
+  margin: 0;
+  font-weight: 400;
+  font-size: 20px;
+  color: #1d1c1d;
+}
+.cart__total {
+  font-weight: 400;
+  font-size: 20px;
+  text-align: right;
+  color: #1d1c1d;
+}
+.cart__order-button {
+  grid-area: button;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 124%;
+  color: #64099b;
+  border: 1px solid #64099b;
+  border-radius: 4px;
+  padding: 16px 24px;
+  width: 137px;
+  height: 54px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.cart__item {
+  font-size: 0;
+  background-color: #f2f9f7;
+}
+.cartItem__title {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 124%;
+  color: #1d1c1d;
+  margin-bottom: 8px;
+}
+.cartItem-image {
+  width: 100%;
+}
+.cartItem__info {
+  padding: 16px;
+}
+.cartItem__content .cartItem__quantity {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 20px;
+}
+.cartItem__quantity-button {
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #b8b8b8;
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.cartItem__quantity-minus {
+  background: url("/image/minus-icon.svg");
+}
+.cartItem__quantity-plus {
+  background: url("/image/plus-icon.svg");
+}
+.cartItem__quantity-input {
+  font-weight: 400;
+  font-size: 20px;
+  width: 26px;
+  text-align: center;
+  background: transparent;
+  outline: none;
+  border: none;
+}
+
+.delivery {
+  padding: 50px 0 100px;
+}
+.delivery__title {
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 110%;
+  color: #64099b;
+  margin-bottom: 32px;
+}
+.delivery__form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  max-width: 640px;
+}
+.delivery__input {
+  border-radius: 4px;
+  padding: 10px 16px;
+  width: 310px;
+  height: 54px;
+  background: #f2f9f7;
+  border: none;
+}
+.delivery__input::placeholder {
+  color: #b8b8b8;
+}
+.delivery__input-address {
+  grid-column: 1/-1;
+}
+.delivery__payment {
+  padding: 12px 0 0;
+  margin: 0;
+  border: none;
+}
+.delivery__payment-title {
+  display: block;
+  font-weight: 400;
+  font-size: 20px;
+}
+.delivery__payment-label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+.delivery__payment-label:last-child {
+  margin-bottom: 0;
+}
+.delivery__radio {
+  margin-right: 8px;
+}
 
 @media (max-width: 1240px) {
   .container {
@@ -302,28 +474,70 @@ img {
   .container {
     padding: 0 16px;
   }
+  .header {
+    top: 0;
+    padding: 0;
+  }
+  .header__container {
+    padding: 8px 16px;
+    gap: 16px;
+  }
+  .header__logo {
+    margin-right: auto;
+  }
   .header__menu {
     display: none;
   }
   .header__title {
     font-size: 40px;
-    max-width: 200px;
+    max-width: 350px;
+    margin-bottom: 24px;
+  }
+  .promo__button {
+    padding: 12px 18px;
+    font-size: 16px;
   }
   .promo-container {
-    flex-direction: column;
-    align-items: flex-start;
-    min-height: 538px;
+    min-height: auto;
+    padding-top: 90px;
+    padding-bottom: 250px;
     background-size: 145px;
     background-position: center bottom;
+  }
+  .products {
+    padding: 60px 0;
+  }
+  .products__title {
+    font-size: 36px;
   }
   .products__list {
     grid-template-columns: repeat(2, 1fr);
     gap: 8px;
   }
+  .product-image {
+    min-height: 226px;
+    object-fit: cover;
+  }
+  .product__content {
+    padding: 32px 8px 8px;
+  }
   .footer__container {
     grid-template-columns: 1fr;
+    gap: 40px;
   }
   .footer__menu {
     flex-direction: column;
+    gap: 16px;
+  }
+  .footer__info {
+    order: 1;
+  }
+  .footer__copyright {
+    margin-top: 0;
+    margin-bottom: 17px;
+  }
+  .footer__description {
+    margin-top: 0;
+    margin-bottom: 3px;
   }
 }
